force-app/main/default/objects/Lead/fields/Demo_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Demo_Requirement__c</fullName>
    <label>Demo Requirement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>