force-app/main/default/objects/Lead/fields/Follow_up_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_DateTime__c</fullName>
    <label>Follow-up DateTime</label>
    <type>DateTime</type>
</CustomField>