force-app/main/default/objects/Lead/fields/Followup_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Followup_Date_Time__c</fullName>
    <label>Followup Date-Time</label>
    <type>DateTime</type>
</CustomField>