force-app/main/default/objects/Lead/fields/Internal_Demo_Date__c.field-meta.xml
<CustomField>
    <fullName>Internal_Demo_Date__c</fullName>
    <label>Internal Demo Date</label>
    <type>Date</type>
</CustomField>