force-app/main/default/objects/Lead/fields/Is_PPT_required__c.field-meta.xml
<CustomField>
    <fullName>Is_PPT_required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is PPT required</label>
    <type>Checkbox</type>
</CustomField>