force-app/main/default/objects/Lead/fields/Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score__c</fullName>
    <formula>IF( ISPICKVAL( Rating , &apos;Warm&apos;) , 0, 
IF(ISPICKVAL(Rating , &apos;Cold&apos;),5,
IF(ISPICKVAL(Rating , &apos;Hot&apos;), 10, 12)))</formula>
    <label>Lead Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>