force-app/main/default/objects/Lead/fields/Masked_Phone__c.field-meta.xml
<CustomField>
    <fullName>Masked_Phone__c</fullName>
    <formula>IF(
  LEN(Phone) = 10,
  &quot;xxxx-xxxx&quot; &amp; RIGHT(Phone, 4),
  Phone
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Masked Phone</label>
    <type>Text</type>
</CustomField>