force-app/main/default/objects/Lead/fields/Resource_Used__c.field-meta.xml
<CustomField>
    <fullName>Resource_Used__c</fullName>
    <label>Resource Used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>