force-app/main/default/objects/Lead/validationRules/Phone_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Required</fullName>
    <active>true</active>
    <errorConditionFormula>$Setup.Validation_Setting__c.Required_Phone_No__c = TRUE
&amp;&amp; ISBLANK(Phone)</errorConditionFormula>
    <errorMessage>PhoneRequired</errorMessage>
</ValidationRule>